# packages/backend/src/indentity/auth/oauth/google/dto/google-token.dto.ts
@@ -1,0 +1,7 @@
+import { IsString, IsNotEmpty } from 'class-validator';
+
+export class GoogleTokenDto {
+  @IsString()
+  @IsNotEmpty()
+  token: string;
+}
